# pipelinebnm

./: .gitignore  Dockerfile  README.md  demo_run.py  inference.py  openenv.yaml  pyproject.toml  pytest_output.txt  requirements.txt  test_output.txt
docs/: architecture.md  reward_design.md
env/: __init__.py  models.py  server.py
env/data/: __init__.py  bug_injector.py  generator.py
env/data/scenarios/: task1_scenario.json  task1_scenario_b.json  task1_scenario_c.json  task2_scenario.json  task2_scenario_b.json  task3_scenario.json  task3_scenario_b.json
env/graders/: __init__.py  grader1.py  grader2.py  grader3.py
env/tasks/: __init__.py  task1_audit.py  task2_schema.py  task3_incident.py
scripts/: benchmark.py  validate_diversity.py
tests/: test_env.py  test_grader2.py  test_inference.py
