[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "broken-pipeline-env"
version = "1.0.0"
description = "Enterprise Data Pipeline Remediation Environment for AI Agents"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "broken-pipeline-env"
version = "1.0.0"